# coretax-extractor

./: .gitignore  AUTO_UPDATE_COMPLETE.md  DATABASE_AUTH_GUIDE.md  PROJECT_STRUCTURE.md  README.md  UPDATE_INTEGRATION_GUIDE.md  add_defender_exclusion.bat  build.bat  build_exe.spec  coretax.db  coretax_extractor_flet.py  db_manager.py  generate_admin_password.py  pyproject.toml  requirements.txt  update_ui_helper.py  version.json
.kiro/steering/: conventions.md  structure.md  tech.md
