[project]
name = "ocr-coretax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
    "pypdf2>=3.0.1",
    "tk>=0.1.0",
    "pyinstaller>=6.15.0",
    "pdoc>=15.0.4",
    "flet>=0.28.3",
    "nuitka>=2.8.4",
]

[tool.uv.workspace]
members = [
    "app",
]
